--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         </div>
         <div class="left">
             <div class="fa fa-icon">
-                <a href="#"><i class="fa fa-instagram fa-1.50x" aria-hidden="true"></i></a>
+                <a href="https://www.instagram.com/sunnyprajapati_s5/"><i class="fa fa-instagram fa-1.50x" aria-hidden="true"></i></a>
                 <a href="#"><i class="fa fa-twitter fa-1.50x" aria-hidden="true"></i></a>
                 <a href="#"><i class="fa fa-github fa-1.50x" aria-hidden="true"></i></a>
                 <a href="#"><i class="fa fa-facebook fa-1.50x" aria-hidden="true"></i></a>
