--- a/index.html
+++ b/index.html
@@ -163,21 +163,21 @@
 
                     </span>
                 </span>
-                <a href="#"><img class="imgc1" src="img5.jpg" alt=""></a>
+                <a href="SOP5.html"><img class="imgc1" src="img5.jpg" alt=""></a>
 
                 <div class="text">
                     <span class="s1001">
                         SOP5
                     </span>
                     <div class="title2">
-                        <a href="#">Use of Audio on web pages using html5</a>
+                        <a href="SOP5.html">Use of Audio on web pages using html5</a>
                     </div>
                     <p class="para">Create a webpage named audio.html to set ana audio file in web page with controls
                         such....
                     </p>
                 </div>
                 <div class="btnn">
-                    <button class="btnn1"><a href="#">View</a></button>
+                    <button class="btnn1"><a href="SOP5.html">View</a></button>
                 </div>
             </div>
             <div class="blogs">
