--- a/SOP2.html
+++ b/SOP2.html
@@ -122,7 +122,7 @@
                 <a href="#"><i class="fa fa-twitter fa-1.50x" aria-hidden="true"></i></a>
                 <a href="#"><i class="fa fa-github fa-1.50x" aria-hidden="true"></i></a>
                 <a href="#"><i class="fa fa-facebook fa-1.50x" aria-hidden="true"></i></a>
-            </div>https://www.instagram.com/sunnyprajapati_s5/
+            </div>
         </div>
     </footer>
 </body>
