--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="stiky">
         <nav class="navbar">
             <div class="logo">
-                <a href="S5.html">Sunny<span>Code</span></a>
+                <a href="index.html">Sunny<span>Code</span></a>
             </div>
             <div class="main">
                 <ul>
