some basic changes

--- a/index.html
+++ b/index.html
@@ -212,32 +212,21 @@
     <section class="sec4">
         <div class="container">
             <div class="head2">
-                <h1>Testimonials</h1>
+                <h1>Quotes</h1>
             </div>
             <div class="cards1">
                 <div class="info1">
                     <p>
-                        I don't have words to thank this man, I'm really grateful to have this channel and website in my
-                        daily routine. If you're a mere beginner, then you can trust this guy and can put your time into
-                        his content. I can assure you that it'll be worth it.
+                        “Any fool can write code that a computer can understand. Good programmers write code that humans can understand.” 
                     </p>
-                    <div class="name">Mohit Kumar</div>
-                    <span class="type">
-                        Web Developer
-                    </span>
+                    <div class="name">– Martin Fowler
+                    </div>
                 </div>
                 <div class="info1">
                     <p>
-                        For everyone who wants to level up their #Coding and #Dev skills - seriously, this channel is
-                        for
-                        you! Both basic and advanced stacks are covered on this channel, and one can learn according to
-                        his
-                        skill levels. And the icing on the cake is, everything is available for free.
+                        “Perfection is achieved not when there is nothing more to add, but rather when there is nothing more to take away.”
                     </p>
-                    <div class="name">Rakesh Shetty</div>
-                    <span class="type">
-                        Web Developer
-                    </span>
+                    <div class="name">– Antoine de Saint-Exupery</div>
                 </div>
             </div>
         </div>
