--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <section class="sec4">
         <div class="container">
             <div class="head2">
-                <h1>Quotes</h1>
+                <h1>Quote's </h1>
             </div>
             <div class="cards1">
                 <div class="info1">
