--- a/SOP4.html
+++ b/SOP4.html
@@ -128,6 +128,7 @@
         <a href="SOP3.html">SOP 3</a>
         <a href="SOP4.html">SOP 4</a>
         <a href="SOP5.html">SOP 5</a>
+        <a href="SOP6.html">SOP 6</a>
     </section>
     <footer class="footer">
         <div class="right">
