--- a/index.html
+++ b/index.html
@@ -188,20 +188,20 @@
 
                     </span>
                 </span>
-                <a href="#"><img class="imgc1" src="pexels-kaique-rocha-65777.jpg" alt=""></a>
+                <a href="SOP6.html"><img class="imgc1" src="pexels-kaique-rocha-65777.jpg" alt=""></a>
 
                 <div class="text">
                     <span class="s1001">
                         SOP6
                     </span>
                     <div class="title2">
-                        <a href="#">Use of video on web pages using html5.</a>
+                        <a href="SOP6.html">Use of video on web pages using html5.</a>
                     </div>
                     <p class="para">Create a webpage named video.HTML to display a video file on web page......
                     </p>
                 </div>
                 <div class="btnn">
-                    <button class="btnn1"><a href="#">View</a></button>
+                    <button class="btnn1"><a href="SOP6.html">View</a></button>
                 </div>
             </div>
         </div>
