--- a/SOP2.html
+++ b/SOP2.html
@@ -110,6 +110,7 @@
         <a href="SOP4.html">SOP 4</a>
         <a href="SOP5.html">SOP 5</a>
         <a href="SOP6.html">SOP 6</a>
+        <a href="SOP7.HTML">SOP 7</a>
     </section>
     <footer class="footer">
         <div class="right">
